Update doc Button

--- a/development/Proposta.ipynb
+++ b/development/Proposta.ipynb
@@ -2,9 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0a8b0587-47b0-4ff0-9bad-892b80c9c3d1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:11.130918Z",
+     "start_time": "2024-06-25T10:59:11.123235Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -24,13 +30,17 @@
    "execution_count": 4,
    "id": "f9763fd9-b3f0-4cb4-83eb-776e8c0c9508",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:15.824740Z",
+     "start_time": "2024-06-25T10:59:15.820554Z"
+    },
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -39,7 +49,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "91640ae3-d941-47f8-b9fc-a57fcb885629",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:16.904520Z",
+     "start_time": "2024-06-25T10:59:16.574247Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from vois.vuetify import button"
@@ -47,14 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "2d70fa33-e5a5-4fdb-9fd7-d4aee7d251fa",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:17.742086Z",
+     "start_time": "2024-06-25T10:59:17.723003Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19bde29e63c045209eee7a04a070ea76",
+       "model_id": "8621d10f72d24aa5a079b4b1a8af2ecc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +84,7 @@
        "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,9 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "2c39496a-c1f9-4712-bc9c-bfe00d9850c2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:19.020310Z",
+     "start_time": "2024-06-25T10:59:19.014631Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "my_old_button.setText('New Name - Old!')"
@@ -92,9 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e15a818a-9ed2-425b-aa71-191f17271fea",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:24.611380Z",
+     "start_time": "2024-06-25T10:59:24.606938Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from vois.vuetify import Button"
@@ -102,14 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "d5295788-094f-4cde-971a-70011dfed6ba",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:25.444253Z",
+     "start_time": "2024-06-25T10:59:25.430533Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "164dc5d3bf6c47cc970405d3e6c4b262",
+       "model_id": "e8eb4558b276485fad6f402f192c4b5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +157,7 @@
        "Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,9 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "acab90f2-bff0-4189-9537-6adb984858bc",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-25T10:59:26.752042Z",
+     "start_time": "2024-06-25T10:59:26.747747Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "my_new_button.text = 'New Name - New!'"
