Test for Button

--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -105,10 +105,10 @@
      "evalue": "'Button' object has no attribute 'textweight'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m b3\u001b[38;5;241m.\u001b[39mtextweight\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Button' object has no attribute 'textweight'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[8], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m b3\u001B[38;5;241m.\u001B[39mtextweight\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Button' object has no attribute 'textweight'"
      ]
     }
    ],
