--- a/development/prova.ipynb
+++ b/development/prova.ipynb
@@ -3,234 +3,154 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-28T08:22:14.244855Z",
+     "start_time": "2024-06-28T08:22:14.031474Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../src')\n",
-    "from vois.vuetify import Button\n",
+    "from vois.vuetify import button\n",
     "import ipyvuetify as v"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def click():\n",
-    "    print(122)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edo = Button(text='ciao', on_click=click)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8929ba6ad1874f988c53463dd364b73e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-28T08:22:15.246714Z",
+     "start_time": "2024-06-28T08:22:15.233531Z"
     }
-   ],
-   "source": [
-    "edo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Widget.__deepcopy__() missing 1 required positional argument: 'memo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ele\u001b[38;5;241m.\u001b[39m__deepcopy__()\n",
-      "\u001b[0;31mTypeError\u001b[0m: Widget.__deepcopy__() missing 1 required positional argument: 'memo'"
-     ]
-    }
-   ],
-   "source": [
-    "ele.__deepcopy__()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edo.text = 'buueeeeu'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_80529/1374255056.py:1: DeprecationWarning: This method is deprecate used obj.text = 'your_new_text'\n",
-      "  edo.setText('elle')\n"
-     ]
-    }
-   ],
-   "source": [
-    "edo.setText('elle')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ll = [1, 2, 3, 4, 5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ll[ll.index(2)] = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 24\n",
-      "-rw-r--r--@ 1 edoardo  staff   190 Jun 18 16:51 deprecationClass.py\n",
-      "-rw-r--r--@ 1 edoardo  staff  2828 Jun 20 08:55 prova.ipynb\n",
-      "-rw-r--r--@ 1 edoardo  staff   768 Jun 19 14:33 prova.py\n"
+      "green green\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edoardo/JRC_Projects/vois/src/vois/vuetify/deprecated/button.py:13: UserWarning: DeprecationWarning: The button class is deprecated, please use Button.\n",
+      "  deprecation_class_warning(self.__class__.__name__)\n",
+      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_37737/3649646137.py:35: UserWarning: DeprecationWarning: The \"draw\" method is deprecated, please just use the object widget itself.\n",
+      "  display(my_button_1.draw())\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0016d9d9b948475cbe4595bdd42df0e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "ll"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    def __copy__(self):\n",
-    "        raise NotImplementedError(\"Widgets cannot be copied; custom implementation required\")\n",
+    "from vois.vuetify import button, settings\n",
     "\n",
-    "    def __deepcopy__(self, memo):\n",
-    "        raise NotImplementedError(\"Widgets cannot be copied; custom implementation required\")"
+    "my_button_1 = button.button(text='Edoardo1',\n",
+    "                            onclick=None,\n",
+    "                            argument=None,\n",
+    "                            width=150,  # TEST\n",
+    "                            height=50,  # TEST\n",
+    "                            selected=False,\n",
+    "                            disabled=False,\n",
+    "                            tooltip='',\n",
+    "                            large=True,  # TEST\n",
+    "                            xlarge=False,\n",
+    "                            small=False,\n",
+    "                            xsmall=False,\n",
+    "                            outlined=True,  # TEST\n",
+    "                            textweight=700,  # TEST\n",
+    "                            href=None,\n",
+    "                            target=None,\n",
+    "                            onlytext=False,\n",
+    "                            textcolor='green',  # TEST\n",
+    "                            class_=\"pa-0 ma-0 btn1\",\n",
+    "                            icon=None,\n",
+    "                            iconlarge=False,\n",
+    "                            iconsmall=False,\n",
+    "                            iconleft=False,\n",
+    "                            iconcolor='black',\n",
+    "                            autoselect=False,\n",
+    "                            dark=settings.dark_mode,\n",
+    "                            rounded=settings.button_rounded,\n",
+    "                            tile=False,\n",
+    "                            colorselected=settings.color_first,\n",
+    "                            colorunselected=settings.color_second,\n",
+    "                            ondblclick=None\n",
+    "                            )\n",
+    "display(my_button_1.draw())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-27T16:14:23.098622Z",
+     "start_time": "2024-06-27T16:14:23.090943Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_35266/4031972531.py:1: UserWarning: DeprecationWarning: The \"draw\" method is deprecated, please just use the object widget itself.\n",
+      "  my_button_3.draw()\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7883a848a88346e5aa87e45395720139",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_button_3.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "edo.p = 99"
+    "my_button_1.iconcolor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "99"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edo.p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ff = [i for i in ee]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transition='scale-transition', v_slots=[{'name': 'activator', 'variable': 'tooltip', 'children': Btn(children=['ciao'], dark=False, depressed=True, disabled=False, height=36.0, icon=False, large=False, layout=None, min_height=36.0, min_width=100.0, outlined=False, rounded=True, small=False, style_='font-family: Roboto; font-size: 17; font-weight: 500; text-transform: none', tile=False, width=100.0, x_small=False)}])], class_='pa-0 ma-0', layout=None)], layout=None, tag='div')]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "99"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ff[0].p"
+    "my_button_1.icon_color"
    ]
   },
   {
