Test slider old

--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "68f4cc75-ce1d-4ce2-9b22-7418749b61a5",
    "metadata": {},
    "outputs": [],
@@ -10,45 +10,29 @@
     "import sys\n",
     "sys.path.append('../../../')\n",
     "\n",
-    "from vois.vuetify import settings, Button"
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) \n",
+    "\n",
+    "\n",
+    "from vois.vuetify import settings, Button\n",
+    "from vois.vuetify import button"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "84940c4b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:7: DeprecationWarning: `onclick` is deprecated as an argument to `__init__`; use `on_click` instead.\n",
-      "  b1 = Button('Test button 1', textweight=300, onclick=onclick, argument=1, width=150, small=False, disabled=False, height=36, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:7: DeprecationWarning: `textweight` is deprecated as an argument to `__init__`; use `textWeight` instead.\n",
-      "  b1 = Button('Test button 1', textweight=300, onclick=onclick, argument=1, width=150, small=False, disabled=False, height=36, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:7: DeprecationWarning: `iconleft` is deprecated as an argument to `__init__`; use `iconLeft` instead.\n",
-      "  b1 = Button('Test button 1', textweight=300, onclick=onclick, argument=1, width=150, small=False, disabled=False, height=36, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:7: DeprecationWarning: `iconcolor` is deprecated as an argument to `__init__`; use `iconColor` instead.\n",
-      "  b1 = Button('Test button 1', textweight=300, onclick=onclick, argument=1, width=150, small=False, disabled=False, height=36, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:10: DeprecationWarning: `onclick` is deprecated as an argument to `__init__`; use `on_click` instead.\n",
-      "  b2 = Button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:10: DeprecationWarning: `textweight` is deprecated as an argument to `__init__`; use `textWeight` instead.\n",
-      "  b2 = Button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:10: DeprecationWarning: `colorselected` is deprecated as an argument to `__init__`; use `colorSelected` instead.\n",
-      "  b2 = Button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:10: DeprecationWarning: `colorunselected` is deprecated as an argument to `__init__`; use `colorUnselected` instead.\n",
-      "  b2 = Button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False,\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:14: DeprecationWarning: `onlytext` is deprecated as an argument to `__init__`; use `onlyText` instead.\n",
-      "  b3 = Button('Contacts', onlytext=True, textcolor=settings.color_first, width=150, height=28, href='https://ec.europa.eu/info/contact_en', target=\"_blank\", tooltip='Open a URL')\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_73303/2468068804.py:14: DeprecationWarning: `textcolor` is deprecated as an argument to `__init__`; use `textColor` instead.\n",
-      "  b3 = Button('Contacts', onlytext=True, textcolor=settings.color_first, width=150, height=28, href='https://ec.europa.eu/info/contact_en', target=\"_blank\", tooltip='Open a URL')\n"
-     ]
-    },
-    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "63e7e7878066498a951847cc79d7f199",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "None"
+       "Button(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text…"
       ]
      },
      "metadata": {},
@@ -56,8 +40,13 @@
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04b7363f3f57498693d3cf11d1e0d6c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "None"
+       "Button(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text…"
       ]
      },
      "metadata": {},
@@ -65,8 +54,13 @@
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b94eb28537a45d2ad337f1e58409dd2",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "None"
+       "Button(children=[Container(children=[Tooltip(bottom=True, children=['Open a URL'], color='#999999', layout=Non…"
       ]
      },
      "metadata": {},
@@ -96,32 +90,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "db43ce68-e3fc-4c28-b4a6-de4b4116b762",
+   "execution_count": 5,
+   "id": "5b902aae",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Button' object has no attribute 'textweight'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m b3\u001B[38;5;241m.\u001B[39mtextweight\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Button' object has no attribute 'textweight'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ceac8503af584377969fee39d89a97cc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09d41605cee34cafab9d802a3de06c80",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "source": [
-    "b3.textweight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b902aae",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "ba = Button('', icon='mdi-sort-ascending',  width=40, iconcolor='black', selected=False, outlined=False)\n",
     "bd = Button('', icon='mdi-sort-descending', width=40, iconcolor='black', selected=True,  outlined=False)\n",
@@ -130,14 +131,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "158c674a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edoardo/JRC_Projects/vois/src/vois/vuetify/Tests/../../../vois/vuetify/deprecated/button.py:13: UserWarning: DeprecationWarning: The button class is deprecated, please use Button.\n",
+      "  deprecation_class_warning(self.__class__.__name__)\n",
+      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/2502310903.py:5: UserWarning: DeprecationWarning: The \"draw\" method is deprecated, please just use the object widget itself.\n",
+      "  b.draw()\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "59290b178fbc4745a94092a098156069",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%run button.py\n",
-    "\n",
-    "b = button('Test button', textweight=450, width=250, height=46,\n",
+    "b = button.button('Test button', textweight=450, width=250, height=46,\n",
     "           selected=True, rounded=True, \n",
     "           icon='mdi-menu-open', iconcolor='black', iconlarge=True)\n",
     "\n",
@@ -146,33 +171,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "41b6c112",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/731926375.py:1: DeprecationWarning: This method is deprecate used instead button_obj.icon = 'your_icon_name'\n",
+      "  b.setIcon('mdi-menu')\n"
+     ]
+    }
+   ],
    "source": [
     "b.setIcon('mdi-menu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d86d2b51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/967366005.py:1: DeprecationWarning: This method is deprecate used instead button_obj.text = 'your_new_text'\n",
+      "  b.setText('New button text')\n"
+     ]
+    }
+   ],
    "source": [
     "b.setText('New button text')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bcef9929",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/1030447386.py:4: UserWarning: DeprecationWarning: The \"draw\" method is deprecated, please just use the object widget itself.\n",
+      "  display(b1.draw())\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c976ef5d3f41485abc56dded74cfbb3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "button(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Icon only button\n",
-    "b1 = button('', textcolor='#ffffff00', onclick=onclick, argument=1, width=50, small=False, disabled=False, height=\"1.8vh\", outlined=False, \n",
+    "b1 = button.button('', textcolor='#ffffff00', onclick=onclick, argument=1, width=50, small=False, disabled=False, height=\"1.8vh\", outlined=False, \n",
     "            tooltip='Example of an extremely long tooltip text', selected=False, icon='mdi-car-light-high', iconleft=True, iconcolor='black', rounded=True)\n",
     "display(b1.draw())"
    ]
