Added templates with 1,2,3 panels

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "57d28671",
+   "execution_count": null,
+   "id": "9a19a4d6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e6926cd5dc042338a2c327779399858",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14005f41783e448e9a2b87b1b1ac00ef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Icon-only popup\n",
     "from vois.vuetify import treeview\n",
@@ -63,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "1c90cb0c",
+   "execution_count": null,
+   "id": "7ec4a1f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,25 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "6c47555c",
+   "execution_count": null,
+   "id": "0c754c7a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ebd8b68c52344c69c5a1625f732ea8c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Menu(children=[Card(children=[Card(children=[Html(children=[CustomTreeview(activatable=True, color='#f8bd1a', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import display\n",
     "\n",
@@ -105,7 +61,7 @@
     "                                           selectable=False,\n",
     "                                           activatable=True,\n",
     "                                           on_activated=on_activated,\n",
-    "                                           rootName='All',\n",
+    "                                           rootName='Select',\n",
     "                                           height='270px')\n",
     "\n",
     "p = popup(treecard, 'None', popupheight=270)\n",
@@ -116,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eefdd60",
+   "id": "89139a81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0444f493",
+   "id": "d6c2278b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d560d4c",
+   "id": "b65cc25f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9e2fc3",
+   "id": "a933c6c1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49e39df3",
+   "id": "fcda3f83",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -201,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84e559af",
+   "id": "f4e5f84c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -209,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a33ce90f",
+   "id": "f0193df2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c3760e",
+   "id": "a4d77d62",
    "metadata": {},
    "outputs": [],
    "source": []
