--- a/src/vois/vuetify/treeviewTest.ipynb
+++ b/src/vois/vuetify/treeviewTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4901887",
+   "id": "77e8d097",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baba7a35",
+   "id": "52fb9a9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcac26a6",
+   "id": "3ff0703d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,101 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0e17baf",
+   "id": "1995c26e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run treeview.py\n",
+    "\n",
+    "root = 'Layers'\n",
+    "\n",
+    "layers = ['Concentration',\n",
+    "          'Emission',\n",
+    "          'Health benefit.Morbidity indicators.Children bronchitis (CB)',\n",
+    "          'Health benefit.Morbidity indicators.Children asthma (CA)',\n",
+    "          'Health benefit.Morbidity indicators.Adult chronic bronchitis (ADB)',\n",
+    "          'Health benefit.Morbidity indicators.Working lost days (WLD)',\n",
+    "          'Health benefit.Morbidity indicators.Reduced activity days (RAD)',\n",
+    "          'Health benefit.Morbidity indicators.Hospitalization admission (HA)',\n",
+    "          'Health benefit.Mortality indicators.Premature deaths (DEATHS)',\n",
+    "          'Health benefit.Mortality indicators.Years of Life Loss (YLL)',\n",
+    "          'Monetized health benefits.Morbidity indicators.Children bronchitis (CB)',\n",
+    "          'Monetized health benefits.Morbidity indicators.Children asthma (CA)',\n",
+    "          'Monetized health benefits.Morbidity indicators.Adult chronic bronchitis (ADB)',\n",
+    "          'Monetized health benefits.Morbidity indicators.Working lost days (WLD)',\n",
+    "          'Monetized health benefits.Morbidity indicators.Reduced activity days (RAD)',\n",
+    "          'Monetized health benefits.Morbidity indicators.Hospitalization admission (HA)',\n",
+    "          'Monetized health benefits.Mortality indicators.Premature deaths (DEATHS)',\n",
+    "          'Monetized health benefits.Mortality indicators.Years of Life Loss (YLL)',\n",
+    "         ]\n",
+    "\n",
+    "def on_activated(item):\n",
+    "    if item == root:\n",
+    "        item = 'Concentration'\n",
+    "        top.setActive(item)\n",
+    "        \n",
+    "    active = top.getActive()\n",
+    "    activearray = active.split('.')\n",
+    "    if len(activearray) > 1:\n",
+    "        selection = activearray[0][0] + ': ' + activearray[-1]\n",
+    "    else:\n",
+    "        selection = active\n",
+    "    print(selection)\n",
+    "    \n",
+    "treecard = createTreeviewFromList(layers,\n",
+    "                                  rootName=root,\n",
+    "                                  displayfullname=False,\n",
+    "                                  opened_all=True,\n",
+    "                                  item_height=24,\n",
+    "                                  selectable=False,\n",
+    "                                  active=layers[0],\n",
+    "                                  activatable=True,\n",
+    "                                  on_activated=on_activated,\n",
+    "                                  open_on_click=True,\n",
+    "                                  width='400px',\n",
+    "                                  height='600px')\n",
+    "top = treeviewOperations(treecard)\n",
+    "treecard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56529362",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top.treeview.active = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cc8cfae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f97cdcc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b8b6d47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8411a685",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94d2e3c",
+   "id": "439931d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd30149",
+   "id": "f761ff20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d791fc1",
+   "id": "a34e0c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bce2e8c2",
+   "id": "8a5ff57e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6995c3de",
+   "id": "adfdeb85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f73e458",
+   "id": "e29f10af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21832ee1",
+   "id": "4c3e1db1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4675b78e",
+   "id": "b7ff365c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc27405c",
+   "id": "0a23ad01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23cb5bad",
+   "id": "94e63b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6a27d86",
+   "id": "45e08e2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "437180bf",
+   "id": "86e38e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ab3d76c",
+   "id": "58c626df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45a8a0ef",
+   "id": "f31312bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf019ddc",
+   "id": "7abc786b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b368a9",
+   "id": "035dba92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -265,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a81e844d",
+   "id": "b430f1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f74ecc",
+   "id": "694ab86d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14752988",
+   "id": "31eec331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf452e44",
+   "id": "a0fd8b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66323c1a",
+   "id": "06470230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c68fc9f7",
+   "id": "6c931a8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c906adb",
+   "id": "c8f0bda8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27db08a4",
+   "id": "da2539cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1e573e",
+   "id": "d097c66d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efad58b4",
+   "id": "a3afc428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f99caa",
+   "id": "3a087c68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "937d7139",
+   "id": "11975332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d5ddec",
+   "id": "e6763e2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88958016",
+   "id": "11ce709d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42709b71",
+   "id": "a865b704",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ddf5f68",
+   "id": "6d93f71e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201b0304",
+   "id": "2c7270f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8756fb7",
+   "id": "5767fcb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a39b0e",
+   "id": "7c56fc9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f081229",
+   "id": "2bb2af12",
    "metadata": {},
    "outputs": [],
    "source": []
