Added left_back flag to page

--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "08231437",
+   "execution_count": 9,
+   "id": "ab7be78c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a97ab1c0fc041f39706f33621d25362",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, HTML, Layout\n",
     "from vois.vuetify import settings\n",
@@ -31,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336aac62",
+   "id": "1e951d0e",
    "metadata": {},
    "outputs": [],
    "source": []
