--- a/src/vois/vuetify/pageTest.ipynb
+++ b/src/vois/vuetify/pageTest.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c04bb940",
+   "execution_count": null,
+   "id": "fc4820ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c13edbc47d684e3ebaab70fd1f6015de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets, Layout\n",
     "\n",
@@ -40,7 +25,7 @@
     "         logoappurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png', #logowidth=50,\n",
     "         logocreditsurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/EC-JRC-logo_horizontal_EN_neg_transparent-background.png',\n",
     "         on_logoapp=on_click, copyrighttext='European Commission - Joint Research Centre',\n",
-    "         show_back=True, show_help=True, on_help=on_click, show_credits=True, on_credits=on_click)\n",
+    "         show_back=True, left_back=True, show_help=True, on_help=on_click, show_credits=True, on_credits=on_click)\n",
     "\n",
     "p.customButtonAdd('mdi-delete', 'Click here to delete your registration', on_delete)\n",
     "\n",
@@ -52,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac13a4ec",
+   "id": "114dadc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a508db8d",
+   "id": "10d9be40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de9aa227",
+   "id": "e0d3fea4",
    "metadata": {},
    "outputs": [],
    "source": []
