--- a/src/vois/templates/template3panelsTest.ipynb
+++ b/src/vois/templates/template3panelsTest.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3465362",
+   "execution_count": 1,
+   "id": "0763104b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae054e6e244d4fd5aa939e92c6c71cb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, HTML, Layout\n",
     "from vois.vuetify import settings\n",
@@ -31,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327b1e9d",
+   "id": "d78af72c",
    "metadata": {},
    "outputs": [],
    "source": []
